# local-llms

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  justfile  pyproject.toml  setup.sh
.github/workflows/: ci.yml  pages.yml
bench/: README.md  app.jsx  benchmark.css  benchmark.html  components.jsx  configs.jsx  data.jsx  guide.jsx  home.jsx  index.html  methodology.jsx  ratings.jsx  sections.jsx
bench/assets/: colors_and_type.css
bench/reports/: profiles.json  ratings.json  reports.json
config/: carnice-v2-27b.conf  gemma4-e4b-obliterated.conf  llama-launcher.sh  llama-server.service  llama-server.service.template  llama-server.v2.service  provider-common.sh  qwen35-27b.conf  qwen35-9b.conf  qwen36-27B-AEON.conf  qwen36-27b.conf  qwen36-35B-A3B-q4-ngram.conf  qwen36-35B-A3B.conf  rtx-5060.conf  rtx-5060.yaml  rtx-5090.conf  rtx-5090.yaml  runtime-common.sh  select-model.sh  vllm-launcher.sh  vllm.service  vllm.yaml
config/endpoints/: chat-9b.yaml  chat-a3b-ngram.yaml  chat-a3b.yaml  chat-aeon.yaml  chat-carnice.yaml  chat-default.yaml  chat-granite.yaml  chat-mythos.yaml  chat-qwopus36.yaml
config/hardware/: rtx-5060.yaml  rtx-5090.yaml
config/profiles/: carnice-v2-27b.yaml  granite-4.1-30b.yaml  mythos.yaml  qwen35-9b.yaml  qwen36-27B-AEON.yaml  qwen36-27b.yaml  qwen36-35B-A3B-q4-ngram.yaml  qwen36-35B-A3B.yaml  qwopus36-35B-A3B.yaml
design/: benchmark_v1.html
docs/: BENCHMARKING.md  CONFIGURATION.md  DRIVER-RECOVERY.md  FRONTEND_AGENTIC_EVAL.md  MODELS.md  README.md  REDESIGN_V2_PLAN.md  ROADMAP.md  RUN_BENCHES.md  SETUP.md  SWE-BENCH.md  TROUBLESHOOTING.md  USAGE.md  WSL2.md
llms/: __init__.py  cli.py
scripts/: bench.sh  benchmark-5090-suite.sh  benchmark.sh  check-syntax.sh  provider.sh  seed_hub.py
tests/: conftest.py  test_cli_smoke.py
(+159 files in other folders)
