[project]
name = "llms"
version = "0.0.2"
description = "Local OpenAI-compatible LLM serving + evaluation harness for personal dev rigs."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Aaron Meese" }]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "jsonschema>=4.22",
    "jinja2>=3.1",
    "rich>=13.7",
    "httpx>=0.27",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
gpu = [
    "nvidia-ml-py>=12.555",
]
eval = [
    "datasets>=2.20",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-snapshot>=0.9",
    "types-pyyaml",
    "types-jsonschema",
]

[project.scripts]
llms = "llms.cli:app"

[build-system]
requires = ["uv_build>=0.4,<0.11"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "llms"
module-root = ""

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["archive", "design", "bench/reports", "benchmark-results"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "SIM",              # simplify
    "RUF",              # ruff-specific
]
ignore = [
    "E501",             # line length: handled by formatter where reasonable
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["archive/", "design/", "bench/reports/", "benchmark-results/"]

[[tool.mypy.overrides]]
module = ["pynvml.*", "datasets.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
